<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="notification_incoming_call_title">Incoming call</string>
    <string name="notification_incoming_call_text">From %s</string>
    <string name="notification_missed_call_title">Missed call</string>
    <string name="notification_missed_call_text">From %s</string>

    <string name="btn_speaker">Speaker</string>
    <string name="btn_mute">Mute</string>
    <string name="btn_accept">Accept</string>
    <string name="btn_reject">Reject</string>
    <string name="btn_hung_up">HungUp</string>
    <string name="btn_call_back">Call Back</string>

    <string name="call_status_connecting">Connecting</string>
    <string name="call_status_ringing">Ringing</string>
    <string name="call_status_reconnecting">Reconnecting</string>
</resources>